<resources>
    <string name="app_name">Mobile Logger</string>
    <string name="action_settings">Settings</string>
    <string name="action_turn_on">Turn on</string>
    <string name="action_turn_off">Turn off</string>
    <string name="search_hr">Search HR</string>
    <string name="title_activity_heart_rate">Heart rate</string>
    <string name="label_data_status">Data state:</string>
    <string name="label_beat_count">Beat count:</string>
    <string name="label_rate_interval">Interval (ms):</string>
    <string name="value_n_a">---</string>
    <string name="status_default">App running</string>
    <string name="empty_list_main">This app version offers communication with no device.</string>
    <string name="title_activity_blood_pressure">Blood pressure</string>
    <string name="load_from_device">Read</string>
    <string name="show_all_records">Show stored records</string>
    <string name="title_activity_blood_pressure_list">Blood pressure - record list</string>
    <string name="empty_list_measurements">No records available</string>
    <string name="char_average">Ø</string>
    <string name="char_heart">♥</string>
    <string name="title_device_list">Sensor list</string>
    <string name="title_select_profile">Profile selection</string>
    <string name="empty_list_profiles">No profile created so far.\n\nCreate new profile with button below or from menu.</string>
    <string name="create_new_profile">Create new profile</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_weight_scale">Weight scale</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="dialog_delete_positive_button">Delete</string>
    <string name="dialog_cancel_button">Cancel</string>
    <string name="dialog_delete_profile_title">Delete profile</string>
    <string name="dialog_delete_profile_message">Are you sure to delete selected profile?</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="title_activity_bluetooth_picker">Bluetooth picker</string>
    <string name="weight_scale_basic_measurement">Basic</string>
    <string name="weight_scale_advanced_measurement">Advanced</string>
    <string name="weight_scale_hydration_percentage">Hydration percentage:</string>
    <string name="weight_scale_fat_percentage">Fat percentage:</string>
    <string name="weight_scale_muscle_mass">Muscle mass:</string>
    <string name="weight_scale_bone_mass">Bone mass:</string>
    <string name="weight_scale_active_metabolic_rate">Active metabolic rate:</string>
    <string name="weight_scale_basal_metabolic_rate">Basal metabolic rate:</string>
    <string name="weight_scale_measuring_ok">Measuring OK</string>
    <string name="weight_scale_measuring_failed">Measuring failed</string>
    <string name="profile_profile_name">Profile name:</string>
    <string name="profile_birth_date">Date of birth:</string>
    <string name="profile_select_birth_date">tap here to select date</string>
    <string name="profile_gender">Gender:</string>
    <string name="profile_height">Height (cm):</string>
    <string name="profile_activity_level">Activity level:</string>
    <string name="profile_lifetime_athlete">Lifetime athlete:</string>
    <string name="profile_create_profile">Create profile</string>
    <string name="profile_update_profile">Update profile</string>
    <string name="profile_specify_profile_name">Specify profile name.</string>
    <string name="profile_specify_birth_date">Specify date of birth.</string>
    <string name="profile_specify_height">Specify your height.</string>
    <string name="profile_duplicit_profile_name">Profile with this name already exists.</string>
    <string name="profile_duplicit_email">This email address is already in use.</string>
    <string name="profile_load_fail">Failed to load selected profile.</string>
    <string name="profile_delete_fail">Failed to delete profile.</string>
    <string name="alert_device_doesnt_support_bluetooth">This device does not support Bluetooth.</string>
    <string name="alert_must_be_logged_in">You must be logged in.</string>
    <string name="alert_communication_not_possible">Communication is not possible. For more information restart this activity.</string>
    <string name="alert_bluetooth_must_be_enabled">Bluetooth must be enabled to perform communication.</string>
    <string name="alert_blood_pressure_device_not_selected">Blood pressure device has not been selected.</string>
    <string name="alert_service_already_connected">Service has been already connected.</string>
    <string name="searching_">Searching&#8230;</string>
    <string name="watching_">Watching&#160;</string>
    <string name="error_">Error -&#160;</string>
    <string name="database_error">An error occurred while manipulating database.</string>
    <string name="title_activity_service_management">Service management</string>
    <string name="title_activity_ant_device_picker">Ant device picker</string>
    <string name="missing_dependency">Missing Dependency</string>
    <string name="required_app_">To use this functionality is required application</string>
    <string name="ant_plus_needed_go_to_store">You need to install or update ANT+ Plugins. Go to Play Store?</string>
    <string name="go_to_play_store">Go to Store</string>
    <string name="no_devices_found">No devices found.</string>
    <string name="searching_for_devices__">Searching for devices&#8230;</string>
    <string name="fail_load_profiles">Failed to load profiles.</string>
    <string name="fail_load_measurements">Failed to load measurements.</string>
    <string name="fail_db_insert">Failed to save record to database.</string>
    <string name="fail_read_device_data">Failed to read data from device.</string>
    <string name="blood_pressure_short_systolic_">SYS&#160;</string>
    <string name="blood_pressure_short_diastolic_">DIA&#160;</string>
    <string name="blood_pressure_short_mean_">Ø&#160;</string>
    <string name="blood_pressure_short_heart_beat_">♥&#160;</string>
    <string name="fail_connect_service">Failed to connect service.</string>
    <string name="service_disconnected">Service disconnected.</string>
    <string name="service_error">Service error.</string>
    <string name="fail_connection_">Connection failed:&#160;</string>
    <string name="disconnected">Disconnected</string>
    <string name="device_list_heart_rate">Heart Rate (ANT+)</string>
    <string name="device_list_blood_pressure">Blood Pressure (BT)</string>
    <string name="device_list_weight_scale">Weight Scale (ANT+)</string>
    <string name="title_activity_glucose_meter">Glucose Meter</string>
    <string name="device_list_glucose_meter">Glucose Meter (BT)</string>
    <string name="label_blood_sample_temperature">Sample temperature (°C):</string>
    <string name="label_code">Code:</string>
    <string name="label_type">Type:</string>
    <string name="title_activity_glucose_list">Glucose Data</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_connect_eegbase">Connect to EEGbase account</string>
    <string name="fail_login_credentials">Wrong credentials</string>
    <string name="fail_communication">Failed to communicate with server</string>
    <string name="profile_email">Email</string>
    <string name="profile_name">Name</string>
    <string name="profile_surname">Surname</string>
    <string name="action_sign_in">Sign in</string>
    <string name="profile_profile_not_found">Specified profile not found</string>
    <string name="action_load_all_records">Load all records</string>
    <string name="action_select_bt">Select Bluetooth device</string>
    <string name="fail_bt_not_selected">Bluetooth device is not selected</string>
    <string name="no_device_selected">No device selected</string>
    <string name="weight_scale_measure_ok">Measure OK</string>
    <string name="service_now_running">Logger service is now running&#8230;</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_upload">Upload to EEGbase</string>
    <string name="title_activity_upload_data">Data upload</string>
    <string name="uploaded">Uploaded</string>
    <string name="title_activity_heart_rate_data_list">Heart Rate Data</string>
    <string name="start_listening">Listen</string>
    <string name="stop_listening">Stop</string>
    <string name="title_activity_weight_scale_data_list">Weight Scale Data</string>
    <string name="prefs_connection_title">Connection</string>
    <string name="prefs_connection_summary">Connection preferences</string>
    <string name="prefs_gen_pars_title">General parameters</string>
    <string name="prefs_gen_pars_summary">Data preferences for EEGbase upload</string>
    <string name="pref_gen_par_append">Append parameter values</string>
    <string name="prefs_cat_gen_par_names">Names</string>
    <string name="pref_gen_par_name_bp">Blood pressure</string>
    <string name="pref_gen_par_name_gm">Glucose</string>
    <string name="pref_gen_par_name_hr">Heart rate</string>
    <string name="pref_gen_par_name_hr_crri">Calculated RR interval</string>
    <string name="pref_gen_par_name_hr_copt">Cumulative operating time</string>
    <string name="pref_gen_par_name_hr_mas">Manufacturer and serial</string>
    <string name="pref_gen_par_name_hr_measurement">Measurement</string>
    <string name="pref_gen_par_name_hr_p4">Page 4</string>
    <string name="pref_gen_par_name_hr_vam">Version and model</string>
    <string name="pref_gen_par_name_ws">Weight scale</string>
    <string name="pref_gen_par_name_ws_bs">Battery status</string>
    <string name="pref_gen_par_name_ws_mid">Manufacturer identification</string>
    <string name="pref_gen_par_name_ws_ms">Manufacturer specific data</string>
    <string name="pref_gen_par_name_ws_measurement">Measurement</string>
    <string name="pref_gen_par_name_ws_pi">Product information</string>
    <string name="fail_no_upload_data_selected">No data selected to upload</string>
    <string name="alert_pair_eegbase_profile">This profile is not paired with EEGbase. Login to EEGbase to pair the profile.</string>
    <string name="empty_list_experiments">No experiments available</string>
    <string name="experiment_id">Experiment ID</string>
    <string name="experiment_scenario_name">Scenario</string>
    <string name="experiment_research_group_name">Research group</string>
    <string name="experiment_time_from">Time from</string>
    <string name="experiment_time_to">Time to</string>
    <string name="experiment_subject_name">Subject</string>
    <string name="fail_experiments_already_downloading">Experiments are already being downloaded.</string>
    <string name="fail_data_already_uploading">Data are already being uploaded.</string>
    <string name="fail_select_experiment">Select experiment to upload data to.</string>
    <string name="action_auto_sync">Automatic data upload</string>
    <string name="btn_refresh">Refresh</string>
    <string name="btn_upload">Upload</string>
    <string name="title_activity_select_experiment">Select Experiment</string>
    <string name="btn_select">Select</string>
    <string name="btn_select_experiment">Select experiment</string>
    <string name="title_data_info">Data info</string>
    <string name="title_experiment_info">Experiment info</string>
    <string name="records"> records</string>
    <string name="parameters_for_upload"> parameters for upload</string>
    <string name="action_delete_selected">Delete selected</string>
    <string name="action_delete_uploaded">Delete uploaded</string>
    <string name="action_delete_all">Delete all</string>
    <string name="action_statistics">Statistics</string>
    <string name="action_de_select_all">(de)select all</string>
</resources>